# sick-beat-butler

./: .env  Cargo.toml
src/: error.rs  main-old.rs  main-trial.rs  main.rs  types.rs  utils.rs
src/commands/: mod.rs  music.rs  stonks.rs
src/commands/league/: mod.rs
src/commands/music/: embeds.rs  handlers.rs  join.rs  mod.rs  pause.rs  queue.rs  resume.rs
src/sources/: ffmpeg.rs  mod.rs  youtube.rs
