[package]
name = "sick-beat-butler"
version = "0.1.0"
authors = ["sicarius <sicarius97@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
reqwest = "0.11.11"


[dependencies.serenity]
version = "0.10"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.songbird]
version = "0.2.2"
features = ["builtin-queue"]

[dependencies.tokio]
version = "1.19.2"
features = ["macros", "rt-multi-thread", "signal"]