[package]
name = "sick-beat-butler"
version = "0.1.0"
authors = ["sicarius <sicarius97@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
reqwest = "0.11.11"
serde = "1.0.137"
serde_json = "1.0.79"

[dependencies.rodio]
version = "0.15.0"
features = ["symphonia-all"]


[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "framework", "standard_framework", "rustls_backend", "collector", "client", "gateway", "model", "rustls_backend", "unstable_discord_api", "voice"]

[dependencies.songbird]
version = "0.2.2"
features = ["builtin-queue"]

[dependencies.tokio]
version = "1.19.2"
features = ["macros", "rt-multi-thread", "signal"]